--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,65 +1,77 @@
+
+/* Variables for colors used */
 :root {
-    --navyblue: rgb(45, 45, 108);
-    --darkblue: rgb(32, 32, 102);
-    --midblue: rgb(46, 46, 158);
-    --lightblue: rgb(60, 60, 214);
-    --paleblue: rgb(110, 159, 231);
-    --grey: rgb(178, 183, 190);
-    --lightgrey: rgb(225, 229, 236);
-    
+  --navyblue: rgb(45, 45, 108);
+  --darkblue: rgb(32, 32, 102);
+  --midblue: rgb(46, 46, 158);
+  --lightblue: rgb(60, 60, 214);
+  --paleblue: rgb(110, 159, 231);
+  --grey: rgb(178, 183, 190);
+  --lightgrey: rgb(225, 229, 236);
 }
 
 body {
-
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* Creates color gradient effect in header by specifying two color stops and the direction of gradient. */
-
 #title {
-    background-image: linear-gradient(to right, var(--lightblue), var(--darkblue));
+  background-image: linear-gradient(
+    to right,
+    var(--lightblue),
+    var(--darkblue)
+  );
 }
 
+/* Sets color of search button */
 #search {
-    background-color: var(--paleblue);
+  background-color: var(--paleblue);
 }
 
+/* Sets on hover color of search button */
 #search:hover {
-background-color: var(--lightblue)
+  background-color: var(--lightblue);
 }
 
+/* Sets background color of weather cards */
 .card-body {
-    background-color: var(--midblue);
+  background-color: var(--midblue);
 }
 
+/* Sets dimensions, margin and border of weather cards */
 .card {
-    max-width: 230px;
-    min-height: 250px;
-    border: 0px;
-    margin: auto;
+  max-width: 230px;
+  min-height: 250px;
+  border: 0px;
+  margin: auto;
 }
 
+/* Sets color of saved search buttons */
 .saved-search {
-    background-color: var(--grey);
+  background-color: var(--grey);
 }
 
+/* Sets on hover color or saved search buttons */
 .saved-search:hover {
-    background-color: var(--lightgrey)
+  background-color: var(--lightgrey);
 }
 
+/* Sets font weight for all buttons */
 .btn {
-    font-weight: 600;
+  font-weight: 600;
 }
 
-
-
+/* Modifies margin when content is reduced to one column */
 @media screen and (max-width: 768px) {
-    #today {
-        margin-top: 10px;
-    }
-
+  #today {
+    margin-top: 10px;
+  }
 }
 
-
-
-    
+/* Creates offset title until content is reduced to one column */
+@media screen and (min-width: 768px) {
+  h1 {
+    position: relative;
+    left: 20%;
+  }
+}
